--- a/less/footer.less
+++ b/less/footer.less
@@ -1,4 +1,11 @@
 .footer {
+  .fun{
+    display: inline-block;
+    animation: animate 1.5s linear infinite;
+  }
+
+  @keyframes animate{.color-rotate(gold, orange, 45deg)};
+  
   width: 100%;
   border-top: 2px dashed silver;
   background: @sandy-beach;
