--- a/less/variables.less
+++ b/less/variables.less
@@ -12,3 +12,10 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+
+// Border Styles
+@border-size: 2px;
+@border-type: dashed;
+
+//Media Queries
+@mobile: ~"(max-width: 500px)";
